css/main-blue.css
/* ... */
.c-screen-contact__address {
  list-style: none;
  font-size: 0.875rem;
  line-height: 1.7142; }

.c-screen-contact__item {
  margin-bottom: 15px;
  display: block;
  font-family: "Lora", sans-serif;
  font-weight: 700; }

.c-section-heading {
  margin-top: 20px;
  padding-top: 50px;
  margin-bottom: 50px; }
  @media (min-width: 900px) {
    .c-section-heading {
      margin-top: 100px;
      margin-bottom: 70px; } }
  .c-section-heading__icon {
    display: inline-block;
    vertical-align: middle; }
  .c-section-heading__header {
    margin-left: 15px;
    display: inline-block;
    vertical-align: bottom; }


.c-project-heading {
  /* padding: 30px 20px 15px 25px; */
  margin-top: 20px;
  padding-top: 25px;
  margin-bottom: 25px; }
  @media (min-width: 900px) {
    .c-project-heading {
      margin-top: 0px;
      margin-bottom: 25px; } }
  .c-project-heading__icon {
    display: inline-block;
    vertical-align: middle; }
  .c-project-heading__header {
    margin-left: 15px;
    display: inline-block;
    vertical-align: bottom; }
  .c-project-heading__author {
    margin-top: 10px;
    margin-left: 15px;
    font-family: "Lora", sans-serif;
    vertical-align: bottom; }
  .c-project-heading__year {
    margin-top: 10px;
    margin-left: 15px;
    font-family: "Lora", sans-serif;
    font-size: 10;
    font-style: italic;
    vertical-align: bottom; }


.c-project-body {
  /* padding: 30px 20px 15px 25px; */
  margin-top: 10px;
  padding-top: 25px;
  margin-bottom: 25px; }
  @media (min-width: 900px) {
    .c-project-body {
      margin-top: 0px;
      margin-bottom: 100px; } }
  .c-project-body__header {
    margin-left: 15px;
    margin-bottom: 25px;
    display: block;
    vertical-align: bottom; }
  .c-project-body__text {
    margin-left: 15px;
    margin-bottom: 25px;
    display: block;
    vertical-align: bottom; }
  .c-project-body__image {
    /* filter: sepia(10%); */
    width: calc(80% - 4px);
    height: auto;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 25px;
    display: none;
    position: center;
    vertical-align: top; }
    @media (min-width: 600px) {
      .c-project-body__image {
        display: block; } }
    /* .c-project-body__image::before {
      content: "";
      display: block;
      margin-bottom: 25px; } */
    /* .c-project-body__image img {
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      width: calc(80% - 4px);
      height: auto;
      object-fit: contain;} */


/* Icons in section headings */
.svg-icon__border {
  fill: none;
  stroke: #132a46;
  width: 90px;
  height: 90px;
  stroke-dasharray: 360px, 360px;
  stroke-dashoffset: 360;
  transition: stroke-dashoffset 1s; }

.svg-icon__item {
  fill: #2066a1;
  stroke: none; }

.svg-icon--is-animated .svg-icon__border {
  stroke-dashoffset: 0; }

@keyframes runSvg {
  0% {
    stroke-dasharray: 10px, 360px;
    stroke-dashoffset: 0; }
  100% {
    stroke-dasharray: 0px, 0px;
    stroke-dashoffset: 0; } }

.c-timeline__list {
  list-style: none;
  overflow: hidden; }

.c-timeline__item {
  padding-left: 100px;
  padding-bottom: 40px;
  padding-right: 15px; }
  @media (min-width: 600px) {
    .c-timeline__item {
      padding-left: 120px;
      padding-bottom: 50px;
      padding-right: 65px; } }
  .c-timeline__item:last-child {
    padding-bottom: 20px; }

.c-timeline__header {
  position: relative; }

.c-timeline__heading {
  margin-bottom: 10px; }

.c-timeline__time {
  position: absolute;
  top: 4px;
  left: -90px;
  font-size: 0.75rem;
  line-height: 1.5;
  font-weight: 700;
  font-family: "Lora", sans-serif; }
  @media (min-width: 600px) {
    .c-timeline__time {
      left: -120px; } }

.c-timeline__line {
  position: absolute;
  width: 14px;
  height: 14px;
  border-radius: 50%;
  background: #2066a1;
  top: 5px;
  left: -20px; }
  @media (min-width: 600px) {
    .c-timeline__line {
      left: -35px; } }
  .c-timeline__line::before {
    content: "";
    position: absolute;
    display: block;
    width: 2px;
    background: #2066a1;
    height: 9999px;
    top: 0;
    left: 50%;
    margin-left: -1px; }

.c-card {
  position: relative; }
  .c-card__content {
    width: 100%; }
  .c-card__item {
    margin-bottom: 5px;
    display: inline-block;
    min-width: 33%;
    background: #f5f5f5;
    overflow: hidden;
    position: relative;
    height: auto;
    cursor: pointer; }
    @media (max-width: 599px) {
      .c-card__item {
        height: 100vh; } }
    .c-card__item:before {
      content: "";
      background: #2066a1;
      display: block;
      width: 200%;
      height: 200%;
      position: absolute;
      bottom: -200%;
      right: -200%;
      border-radius: 50%;
      transition: all 0.5s ease-out; }
    .c-card__item:hover {
      color: #fefefe; }
      .c-card__item:hover::before {
        bottom: -50%;
        right: -50%; }
      .c-card__item:hover .c-card__header, .c-card__item:hover .c-card__icon {
        color: #fefefe; }
    .c-card__item--text-only {
      background-color: #2066a1;
      background-repeat: no-repeat;
      background-size: cover; }
      .c-card__item--text-only .c-card__text {
        color: #fefefe;
        font-style: italic;
        font-weight: 700;
        font-family: "Lora", sans-serif;
        font-size: 1.125rem;
        line-height: 1.55; }
      .c-card__item--text-only:hover::before {
        display: none; }
    .c-card__item--modal {
      position: fixed;
      height: 100vh;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
      z-index: 101;
      background: #f5f5f5;
      overflow: hidden; }
      @media (min-width: 1200px) {
        .c-card__item--modal {
          position: absolute;
          height: auto; } }
      .c-card__item--modal:hover {
        color: #505050; }
        .c-card__item--modal:hover .c-card__icon {
          color: #2066a1; }
        .c-card__item--modal:hover .c-card__header {
          color: #272626; }
/* ... */

